# ezytutors

./: Cargo.toml  README.md
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  models.rs  routes.rs  state.rs
tutor-web-app-ssr/: Cargo.toml
tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handler.rs  model.rs  routes.rs
tutor-web-app-ssr/src/iter5/dbscripts/: user.sql
tutor-web-app-ssr/src/iter6/: model.rs  routes.rs
tutor-web-app-ssr/src/iter6/handler/: auth.rs  course.rs
tutor-web-app-ssr/static/: static-web-page.html  styles.css  tutor-styles.css
tutor-web-app-ssr/static/iter1/: index.html
tutor-web-app-ssr/static/iter2/: form.html  user.html
tutor-web-app-ssr/static/iter3/: list.html
tutor-web-app-ssr/static/iter4/: list.html
tutor-web-app-ssr/static/iter5/: register.html
tutor-web-app-ssr/static/iter6/: register.html  signin.html  user.html
tutor-web-service/: Cargo.toml
tutor-web-service/src/iter2/: handlers.rs
tutor-web-service/src/iter3/: database.sql  db_access.rs  handlers.rs  iter3-test-clean.sql  models.rs  routes.rs
tutor-web-service/src/iter5/: errors.rs  routes.rs
tutor-web-service/src/iter5/dbaccess/: course.rs  tutor.rs
tutor-web-service/src/iter5/dbscripts/: course.sql  tutor-course.sql
tutor-web-service/src/iter5/handlers/: course.rs  general.rs  tutor.rs
tutor-web-service/src/iter5/models/: course.rs  tutor.rs
