[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
tera = "1.15.0"
serde = {version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
awc = "3.0.0"
dotenv = "0.15.0"
sqlx = {version = "0.5.13", default_features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
rust-argon2 = "1.0.0"

[dev-dependencies]
actix-rt = "2.7.0"
