[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
dotenv = "0.15.0"
sqlx = {version = "0.5.13", default_features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
serde = {version = "1.0.137", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
openssl = {version = "0.10.40", features = ["vendored"]}
